--- a/hello.html
+++ b/hello.html
@@ -133,7 +133,9 @@
 <button type="button" onclick="alert('Perfil Linkedin de Jaiber')">
   <a href="https://github.com/Djaiber">LINKEDIN PROFILE</a></button>
   <h1>Algoritmos de Ordenamiento</h1>
-  
+  <p>Los algoritmos de ordenamiento son un conjunto de instrucciones que se utilizan para ordenar una lista de elementos. 
+    Los elementos pueden ser números, letras o cualquier otro tipo de datos. El ordenamiento se puede realizar en orden ascendente o descendente.</p>
+  <form id="entradas"
   <table border="1">
     <tr>
         <th colspan="4">Algoritmos de Ordenamiento</th>
@@ -147,8 +149,8 @@
         <th>Big O</th>
       </tr>
     <tr>
-      <td><input type="text" id="burbujaInput"></td>
-      <td><input type="text" id="burbujaInput"></td>
+      <td><input type="text" name="nombre" placeholder="Nombre"></td>
+      <td><input type="email" name="email" placeholder="Correo electrónico"></td>
       
       
     </tr>
@@ -161,7 +163,8 @@
       <th colspan="3"><button onclick="ordenarBurbuja()">Enviar Datos</button></td>
     </tr>
   </table>
-
+  <button type="submit">Enviar</button>
+</form>
   
 </body>
 </html>
