--- a/Page2.html
+++ b/Page2.html
@@ -1,21 +1,54 @@
 <!DOCTYPE html>
+
 <head>
   <title>Programación Avanzada</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="Styles\page2.css">
   <script src="script.js" defer></script>
 </head>
 
 <html>
-  <body>
-  <h1>Algoritmos de Ordenamiento</h1>
-  <p>Los algoritmos de ordenamiento son un conjunto de instrucciones que se utilizan para ordenar una lista de elementos. 
-    Los elementos pueden ser números, letras o cualquier otro tipo de datos. El ordenamiento se puede realizar en orden ascendente o descendente.</p>
- </br>
 
- <!--En el action colocacamos la ruta donde queremos que se envie la informacion-->
+<body>
+  <div>
+    <h1 id="fondo">Introducción a la Programación en HTML</h1>
+    <p>HTML (HyperText Markup Language) es un lenguaje de marcado utilizado para crear y estructurar el contenido de las páginas web. Junto con CSS (Cascading Style Sheets) y JavaScript, HTML forma la base de la programación web moderna.</p>
 
-    <form action="/formulario" method="GET">
+    <h2>Elementos Básicos de HTML</h2>
+    <p>HTML utiliza una serie de elementos y etiquetas para definir la estructura y el contenido de una página web. Algunos elementos básicos incluyen:</p>
+    <ul>
+        <li>&lt;html&gt;: Define el inicio y el fin del documento HTML.</li>
+        <li>&lt;head&gt;: Contiene metadatos como el título de la página y enlaces a recursos externos.</li>
+        <li>&lt;body&gt;: Contiene el contenido visible de la página, como texto, imágenes y otros elementos.</li>
+        <li>&lt;h1&gt;, &lt;h2&gt;, ..., &lt;h6&gt;: Encabezados de diferentes niveles para jerarquizar el contenido.</li>
+        <li>&lt;p&gt;: Párrafos de texto.</li>
+        <li>&lt;a&gt;: Enlaces a otras páginas o recursos.</li>
+        <li>&lt;img&gt;: Imágenes.</li>
+    </ul>
+   
+    <h2>Etiquetas y Elementos Anidados</h2>
+    <p>En HTML, los elementos pueden anidarse unos dentro de otros para crear estructuras más complejas. Por ejemplo:</p>
+    <pre>
+        &lt;div&gt;
+            &lt;h3&gt;Título&lt;/h3&gt;
+            &lt;p&gt;Este es un párrafo dentro del div.&lt;/p&gt;
+        &lt;/div&gt;
+    </pre>
+
+    <h2>Uso de CSS y JavaScript</h2>
+    <p>Para dar estilo a las páginas web, se utiliza CSS para controlar el diseño y la presentación. JavaScript se utiliza para agregar interactividad y dinamismo a las páginas.</p>
+</div>
+
+  <h1 id="title">Algoritmos de Ordenamiento</h1>
+  <p class="text">Los algoritmos de ordenamiento son un conjunto de instrucciones que se utilizan para ordenar una lista
+    de elementos.
+    Los elementos pueden ser números, letras o cualquier otro tipo de datos. El ordenamiento se puede realizar en orden
+    ascendente o descendente.</p>
+  </br>
+
+  <!--En el action colocacamos la ruta donde queremos que se envie la informacion-->
+
+  <form action="/formulario" method="GET">
     <table>
       <thead>
         <th colspan="3">Algoritmos de Ordenamiento</th>
@@ -24,7 +57,7 @@
         <tr>
           <td rowspan="4"><br><img src="images\sort-algoritms.png" alt="Image" width="220"></td>
         </tr>
-        <tr>  
+        <tr>
           <td>
             <input type="text" id="Algoritmo1" name="Algoritmo1" placeholder="Algoritmo 1">
             <label for="Algoritmo1">Tipo 1</label><br>
@@ -48,7 +81,7 @@
           <td>
             <input type="text" id="Algoritmo5" name="Algoritmo5" placeholder="Algoritmo 5">
             <label for="Algoritmo5">Tipo 5</label><br>
-          </td> 
+          </td>
           <td>
             <input type="text" id="Algoritmo6" name="Algoritmo6" placeholder="Algoritmo 6">
             <label for="Algoritmo6">Tipo 6</label><br>
@@ -59,197 +92,185 @@
       <tfoot>
         <tr>
           <td colspan="2">
-        <textarea cols="50" id="OtrosAlgoritmos" placeholder="Sí recuerda, agrege otros algoritmos">
+            <textarea cols="50" id="OtrosAlgoritmos" placeholder="Sí recuerda, agrege otros algoritmos">
         </textarea>
-        <label for="OtrosAlgoritmos">Otros Algoritmos</label><br>
+            <label for="OtrosAlgoritmos">Otros Algoritmos</label><br>
           </td>
-        
-        <td>
-          <!--El boton submit es el que envia la informacion-->
-          <button type="submit"><img src="images\icons8-send-button-64.png"/>Enviar Datos</button>
-        </td>
+
+          <td>
+            <!--El boton submit es el que envia la informacion-->
+            <button type="submit"><img src="images\icons8-send-button-64.png" />Enviar Datos</button>
+          </td>
         </tr>
       </tfoot>
     </table>
- </form>
+  </form>
 
-<h1>Hello, World!</h1>
+  <h1>Hello, World!</h1>
 
-<h1>HTML FILE</h1>
-<p>HTML (HyperText Markup Language) es el lenguaje estándar para crear 
-  páginas web. Utiliza etiquetas para estructurar el contenido, como encabezados,
-   párrafos, listas y enlaces. Una característica interesante de HTML es su 
-   capacidad para integrar contenido multimedia, como imágenes y videos, 
-   directamente en la página. Además, HTML5 introdujo nuevas etiquetas semánticas 
-   que describen el significado del contenido, lo que mejora la accesibilidad y la 
-   optimización para motores de búsqueda.</p>
-
-
-<h1>CSS FILE</h1>
-<p>Un archivo .css es un archivo de hoja de estilo utilizado para dar estilo
-   y diseño a los elementos de una página web. Define cómo se verán los elementos,
-  como colores, fuentes, márgenes y disposición. Esto permite separar la 
-  estructura HTML del diseño visual, lo que hace que el mantenimiento y 
-  la actualización sean más eficientes.</p>
-
-<h1>JS FILE</h1>
-<p>JavaScript es un lenguaje de programación ampliamente utilizado en el 
-  desarrollo web. Es un lenguaje de scripting que se ejecuta en el navegador 
-  del usuario y permite la creación de interacciones dinámicas en una página web. 
-  Puede manipular el contenido HTML, responder a eventos del usuario y comunicarse 
-  con servidores para actualizar la página sin necesidad de recargarla, lo que 
-  brinda una experiencia más fluida a los usuarios.</p>
-
-<style>
-  table, th, td {
-   
-    border: 1px solid black;
-    border-collapse: collapse;
-  }
-  th, td {
-    padding: 15px;
-    text-align: center;
-  }
-  </style>
+  <h1 id="title">HTML FILE</h1>
+  <p class="text">HTML (HyperText Markup Language) es el lenguaje estándar para crear
+    páginas web. Utiliza etiquetas para estructurar el contenido, como encabezados,
+    párrafos, listas y enlaces. Una característica interesante de HTML es su
+    capacidad para integrar contenido multimedia, como imágenes y videos,
+    directamente en la página. Además, HTML5 introdujo nuevas etiquetas semánticas
+    que describen el significado del contenido, lo que mejora la accesibilidad y la
+    optimización para motores de búsqueda.</p>
 
 
-<table>
-<thead>
-  <th colspan="3">Machine Learning</th>
-</thead>
-</tbody>
-<tr>
-  <td rowspan="4"><br><img src="images\ML.png" alt="Image"></td>
-</tr>
+  <h1 id="title">CSS FILE</h1>
+  <p class="special">Un archivo .css es un archivo de hoja de estilo utilizado para dar estilo
+    y diseño a los elementos de una página web. Define cómo se verán los elementos,
+    como colores, fuentes, márgenes y disposición. Esto permite separar la
+    estructura HTML del diseño visual, lo que hace que el mantenimiento y
+    la actualización sean más eficientes.</p>
 
-<tr>
-  <td>Supervised learning</td>
-  <td>Unsupervised learning</td>
-</tr>
-<tr>
-  <td>Regression, Classification</td>
-  <td>Clustering</td>
-</tr>
-<tr>
-  <td>Decision Trees</td>
-  <td>Neural Networks</td>
-</tbody>
-  <!-- Table footer -->
-  <tfoot>
+  <h1 id="title">JS FILE</h1>
+  <p class="text">JavaScript es un lenguaje de programación ampliamente utilizado en el
+    desarrollo web. Es un lenguaje de scripting que se ejecuta en el navegador
+    del usuario y permite la creación de interacciones dinámicas en una página web.
+    Puede manipular el contenido HTML, responder a eventos del usuario y comunicarse
+    con servidores para actualizar la página sin necesidad de recargarla, lo que
+    brinda una experiencia más fluida a los usuarios.</p>
+
+  <table>
+    <thead>
+      <th colspan="3">Machine Learning</th>
+    </thead>
+    </tbody>
     <tr>
-      <td colspan="3">Fuente: Wikipedia</td>
+      <td rowspan="4"><br><img src="images\ML.png" alt="Image"></td>
     </tr>
-  </tfoot>
-</table>
 
-
-</br>
-
-
-<table>
-  <!-- Table header -->
-  <thead>
-    <th colspan="4">Sistemas Operativos</th>
-  </thead>
-  
-  <!-- Table body -->
-  <tbody<tr>
-    <th>Sistema Operativo</th>
-    <th>Descripción</th>
-    <th>Fecha de Lanzamiento</th>
-  </tr>
-  <tr>
-    <td rowspan="5"><br><img src="images\operating-system.jpg" alt="Image" width="320"></td>
-  </tr>
-  <tr>
-    <td>Windows</td>
-    <td>Sistema operativo desarrollado por Microsoft con una interfaz gráfica de usuario.</td>
-    <td>Noviembre de 1985</td>
-  </tr>
-  <tr>
-    <td>macOS</td>
-    <td>Sistema operativo de Apple diseñado para sus computadoras Macintosh.</td>
-    <td>Marzo de 2001</td>
-  </tr>
-  <tr>
-    <td>Linux</td>
-    <td>Sistema operativo de código abierto basado en el kernel de Linux. Viene en varias distribuciones.</td>
-    <td>Septiembre de 1991</td>
-  </tr>
-  <tr>
-    <td>Android</td>
-    <td>Sistema operativo móvil desarrollado por Google, basado en el kernel de Linux.</td>
-    <td>Septiembre de 2008</td>
-  </tr>
-  <tbody>
-  <!-- Table footer -->
-  <tfoot>
     <tr>
-      <td colspan="4">Fuente: Wikipedia</td>
+      <td>Supervised learning</td>
+      <td>Unsupervised learning</td>
     </tr>
-  </tfoot>
-  
-</br>
+    <tr>
+      <td>Regression, Classification</td>
+      <td>Clustering</td>
+    </tr>
+    <tr>
+      <td>Decision Trees</td>
+      <td>Neural Networks</td>
+      </tbody>
+      <!-- Table footer -->
+      <tfoot>
+        <tr>
+          <td colspan="3">Fuente: Wikipedia</td>
+        </tr>
+      </tfoot>
+  </table>
 
-</table>
-</br>
-</br>
-<table>
-  <thead>
-    <th colspan="4">Principales Iniciativas de Open-Source</th>
-  </thead>
-</tbody>  
-<tr>
-  <td rowspan="6"><img src="images\open-source.png" alt="Image"></td>
-</tr>
-<tr>
-  <th>Software</th>
-  <th>Descripción</th>
-  <th>Proyecto</th>
-</tr>
-<tr>
-  <td>Linux</td>
-  <td>Sistema operativo de código abierto basado en el kernel de Linux.</td>
-  <td><a target="_blank" href="https://www.kernel.org/">kernel.org</a></td>
-</tr>
-<tr>
-  <td>Firefox</td>
-  <td>Navegador web de código abierto desarrollado por Mozilla.</td>
-  <td><a target="_blank" href="https://www.mozilla.org/firefox/">mozilla.org/firefox</a></td>
-</tr>
-<tr>
-  <td>LibreOffice</td>
-  <td>Suite de productividad que incluye procesador de texto, hoja de cálculo, presentaciones, etc.</td>
-  <td><a target="_blank" href="https://www.libreoffice.org/">libreoffice.org</a></td>
-</tr>
-<tr>
-  <td>WordPress</td>
-  <td>Plataforma de gestión de contenido (CMS) utilizada para crear sitios web y blogs.</td>
-  <td><a target="_blank" href="https://wordpress.org/">wordpress.org</a></td>
-</tbody>
-    <!-- Table footer -->
-    <tfoot>
-      <tr>
-        <td colspan="4">Fuente: Wikipedia</td>
-      </tr>
-    </tfoot>
+
   </br>
-</table>
 
 
-</br>
+  <table>
+    <!-- Table header -->
+    <thead>
+      <th colspan="4">Sistemas Operativos</th>
+    </thead>
+
+    <!-- Table body -->
+    <tbody<tr>
+      <th>Sistema Operativo</th>
+      <th>Descripción</th>
+      <th>Fecha de Lanzamiento</th>
+      </tr>
+      <tr>
+        <td rowspan="5"><br><img src="images\operating-system.jpg" alt="Image" width="320"></td>
+      </tr>
+      <tr>
+        <td>Windows</td>
+        <td>Sistema operativo desarrollado por Microsoft con una interfaz gráfica de usuario.</td>
+        <td>Noviembre de 1985</td>
+      </tr>
+      <tr>
+        <td>macOS</td>
+        <td>Sistema operativo de Apple diseñado para sus computadoras Macintosh.</td>
+        <td>Marzo de 2001</td>
+      </tr>
+      <tr>
+        <td>Linux</td>
+        <td>Sistema operativo de código abierto basado en el kernel de Linux. Viene en varias distribuciones.</td>
+        <td>Septiembre de 1991</td>
+      </tr>
+      <tr>
+        <td>Android</td>
+        <td>Sistema operativo móvil desarrollado por Google, basado en el kernel de Linux.</td>
+        <td>Septiembre de 2008</td>
+      </tr>
+      <tbody>
+        <!-- Table footer -->
+      <tfoot>
+        <tr>
+          <td colspan="4">Fuente: Wikipedia</td>
+        </tr>
+      </tfoot>
+
+      </br>
+
+  </table>
+  </br>
+  </br>
+  <table>
+    <thead>
+      <th colspan="4">Principales Iniciativas de Open-Source</th>
+    </thead>
+    </tbody>
+    <tr>
+      <td rowspan="6"><img src="images\open-source.png" alt="Image"></td>
+    </tr>
+    <tr>
+      <th>Software</th>
+      <th>Descripción</th>
+      <th>Proyecto</th>
+    </tr>
+    <tr>
+      <td>Linux</td>
+      <td>Sistema operativo de código abierto basado en el kernel de Linux.</td>
+      <td><a target="_blank" href="https://www.kernel.org/">kernel.org</a></td>
+    </tr>
+    <tr>
+      <td>Firefox</td>
+      <td>Navegador web de código abierto desarrollado por Mozilla.</td>
+      <td><a target="_blank" href="https://www.mozilla.org/firefox/">mozilla.org/firefox</a></td>
+    </tr>
+    <tr>
+      <td>LibreOffice</td>
+      <td>Suite de productividad que incluye procesador de texto, hoja de cálculo, presentaciones, etc.</td>
+      <td><a target="_blank" href="https://www.libreoffice.org/">libreoffice.org</a></td>
+    </tr>
+    <tr>
+      <td>WordPress</td>
+      <td>Plataforma de gestión de contenido (CMS) utilizada para crear sitios web y blogs.</td>
+      <td><a target="_blank" href="https://wordpress.org/">wordpress.org</a></td>
+      </tbody>
+      <!-- Table footer -->
+      <tfoot>
+        <tr>
+          <td colspan="4">Fuente: Wikipedia</td>
+        </tr>
+      </tfoot>
+      </br>
+  </table>
 
 
-<button type="button">
-  <a target="_blank" href="https://github.com/Djaiber">GITHUB PORFILE</a>
-</button>
-<button type="button">
-  <a target="_blank" href="https://github.com/Djaiber">LINKEDIN PROFILE</a>
-</button>
-</br>
-</br> 
+  </br>
 
-  
-  
+
+  <button type="button">
+    <a target="_blank" href="https://github.com/Djaiber">GITHUB PORFILE</a>
+  </button>
+  <button type="button">
+    <a target="_blank" href="https://github.com/Djaiber">LINKEDIN PROFILE</a>
+  </button>
+  </br>
+  </br>
+
+
+
 </body>
+
 </html>
