Cambio de etiquetas y agregar fuente Lato

--- a/Page2.html
+++ b/Page2.html
@@ -4,7 +4,9 @@
   <title>Programación Avanzada</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="Styles\page2.css">
-  <script src="script.js" defer></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
 </head>
 
 <html>
@@ -12,7 +14,10 @@
 <body>
   <div>
     <h1 id="fondo">Introducción a la Programación en HTML</h1>
-    <p>HTML (HyperText Markup Language) es un lenguaje de marcado utilizado para crear y estructurar el contenido de las páginas web. Junto con CSS (Cascading Style Sheets) y JavaScript, HTML forma la base de la programación web moderna.</p>
+    <p class="decoration"> HTML (HyperText Markup Language) es un lenguaje de
+       marcado utilizado para crear y estructurar el contenido de las páginas web. 
+      Junto con CSS (Cascading Style Sheets) y JavaScript, HTML forma
+       la base de la programación web moderna.</p>
 
     <h2>Elementos Básicos de HTML</h2>
     <p>HTML utiliza una serie de elementos y etiquetas para definir la estructura y el contenido de una página web. Algunos elementos básicos incluyen:</p>
@@ -39,6 +44,7 @@
     <p>Para dar estilo a las páginas web, se utiliza CSS para controlar el diseño y la presentación. JavaScript se utiliza para agregar interactividad y dinamismo a las páginas.</p>
 </div>
 
+<div class="margen">
   <h1 id="title">Algoritmos de Ordenamiento</h1>
   <p class="text">Los algoritmos de ordenamiento son un conjunto de instrucciones que se utilizan para ordenar una lista
     de elementos.
@@ -105,8 +111,9 @@
       </tfoot>
     </table>
   </form>
+</div>
 
-  <h1>Hello, World!</h1>
+
 
   <h1 id="title">HTML FILE</h1>
   <p class="text">HTML (HyperText Markup Language) es el lenguaje estándar para crear
@@ -119,7 +126,7 @@
 
 
   <h1 id="title">CSS FILE</h1>
-  <p class="special">Un archivo .css es un archivo de hoja de estilo utilizado para dar estilo
+  <p class="text">Un archivo .css es un archivo de hoja de estilo utilizado para dar estilo
     y diseño a los elementos de una página web. Define cómo se verán los elementos,
     como colores, fuentes, márgenes y disposición. Esto permite separar la
     estructura HTML del diseño visual, lo que hace que el mantenimiento y
