--- a/Page2.html
+++ b/Page2.html
@@ -54,7 +54,7 @@
 
   <!--En el action colocacamos la ruta donde queremos que se envie la informacion-->
 
-  <form action="/formulario" method="GET">
+  <form action="Page3.html" method="GET">
     <table>
       <thead>
         <th colspan="3">Algoritmos de Ordenamiento</th>
@@ -102,12 +102,11 @@
         </textarea>
             <label for="OtrosAlgoritmos">Otros Algoritmos</label><br>
           </td>
-
-          <td>
-            <!--El boton submit es el que envia la informacion-->
-            <button type="submit"><img src="images\icons8-send-button-64.png" />Enviar Datos</button>
-          </td>
-        </tr>
+            <td>
+              <!--El boton submit es el que envia la informacion-->
+              <button type="submit"><img src="images\icons8-send-button-64.png" />Enviar Datos</button>
+            </td>
+          </tr>       
       </tfoot>
     </table>
   </form>
@@ -168,57 +167,7 @@
         </tr>
       </tfoot>
   </table>
-
-
   </br>
-
-
-  <table>
-    <!-- Table header -->
-    <thead>
-      <th colspan="4">Sistemas Operativos</th>
-    </thead>
-
-    <!-- Table body -->
-    <tbody<tr>
-      <tr>
-        <td rowspan="6"><br><img src="images\operating-system.jpg" alt="Image" width="320"></td>
-      </tr>
-      
-      <th>Sistema Operativo</th>
-      <th>Descripción</th>
-      <th>Fecha de Lanzamiento</th>
-      </tr>
-      
-      <tr>
-        <td>Windows</td>
-        <td>Sistema operativo desarrollado por Microsoft con una interfaz gráfica de usuario.</td>
-        <td>Noviembre de 1985</td>
-      </tr>
-      <tr>
-        <td>macOS</td>
-        <td>Sistema operativo de Apple diseñado para sus computadoras Macintosh.</td>
-        <td>Marzo de 2001</td>
-      </tr>
-      <tr>
-        <td>Linux</td>
-        <td>Sistema operativo de código abierto basado en el kernel de Linux. Viene en varias distribuciones.</td>
-        <td>Septiembre de 1991</td>
-      </tr>
-      <tr>
-        <td>Android</td>
-        <td>Sistema operativo móvil desarrollado por Google, basado en el kernel de Linux.</td>
-        <td>Septiembre de 2008</td>
-      </tr>
-      <tbody>
-        <!-- Table footer -->
-      <tfoot>
-        <tr>
-          <td colspan="4">Fuente: Wikipedia</td>
-        </tr>
-      </tfoot>
-
-      </br>
 
   </table>
   </br>
