--- a/Page2.html
+++ b/Page2.html
@@ -7,6 +7,35 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+<script>
+  window.onload = function() {
+      // Obtén los parámetros de la URL
+      const params = new URLSearchParams(window.location.search);
+
+      // Obtiene los valores de los parámetros del formulario
+      const algoritmo1 = params.get('Algoritmo1');
+      const algoritmo2 = params.get('Algoritmo2');
+      const algoritmo3 = params.get('Algoritmo3');
+      const algoritmo4 = params.get('Algoritmo4');
+      const algoritmo5 = params.get('Algoritmo5');
+      const algoritmo6 = params.get('Algoritmo6');
+
+      // ... Obtén los otros valores de algoritmos
+
+      // Actualiza el contenido de elementos HTML con los valores
+      document.getElementById('resultadoAlgoritmo1').textContent = algoritmo1;
+      document.getElementById('resultadoAlgoritmo2').textContent = algoritmo2;
+      document.getElementById('resultadoAlgoritmo3').textContent = algoritmo3;
+      document.getElementById('resultadoAlgoritmo4').textContent = algoritmo4;
+      document.getElementById('resultadoAlgoritmo5').textContent = algoritmo5;
+      document.getElementById('resultadoAlgoritmo6').textContent = algoritmo6;
+      // ... Actualiza los otros elementos HTML con los valores
+
+      // También puedes hacer algo similar con el textarea
+      const otrosAlgoritmos = params.get('OtrosAlgoritmos');
+      document.getElementById('resultadoOtrosAlgoritmos').textContent = otrosAlgoritmos;
+  };
+</script>
 </head>
 
 <html>
@@ -53,8 +82,6 @@
   </br>
 
   <!--En el action colocacamos la ruta donde queremos que se envie la informacion-->
-
-  <form action="Page3.html" method="GET">
     <table>
       <thead>
         <th colspan="3">Algoritmos de Ordenamiento</th>
@@ -64,52 +91,27 @@
           <td rowspan="4"><br><img src="images\sort-algoritms.png" alt="Image" width="220"></td>
         </tr>
         <tr>
-          <td>
-            <input type="text" id="Algoritmo1" name="Algoritmo1" placeholder="Algoritmo 1">
-            <label for="Algoritmo1">Tipo 1</label><br>
-          </td>
-          <td>
-            <input type="text" id="Algoritmo2" name="Algoritmo2" placeholder="Algoritmo 2">
-            <label for="Algoritmo2">Tipo 2</label><br>
-          </td>
+          <td>Algoritmo 1: <span id="resultadoAlgoritmo1"></span></td>
+          <td>Algoritmo 2: <span id="resultadoAlgoritmo2"></span></td>
         </tr>
         <tr>
-          <td>
-            <input type="text" id="Algoritmo3" name="Algoritmo3" placeholder="Algoritmo 3">
-            <label for="Algoritmo3">Tipo 3</label><br>
-          </td>
-          <td>
-            <input type="text" id="Algoritmo4" name="Algoritmo4" placeholder="Algoritmo 4">
-            <label for="Algoritmo4">Tipo 4</label><br>
-          </td>
+          <td>Algoritmo 3: <span id="resultadoAlgoritmo3"></span></td>
+          <td>Algoritmo 4: <span id="resultadoAlgoritmo4"></span></td>
         </tr>
         <tr>
-          <td>
-            <input type="text" id="Algoritmo5" name="Algoritmo5" placeholder="Algoritmo 5">
-            <label for="Algoritmo5">Tipo 5</label><br>
-          </td>
-          <td>
-            <input type="text" id="Algoritmo6" name="Algoritmo6" placeholder="Algoritmo 6">
-            <label for="Algoritmo6">Tipo 6</label><br>
-          </td>
+        
+            <td>Algoritmo 5: <span id="resultadoAlgoritmo5"></span></td>
+            <td>Algoritmo 6: <span id="resultadoAlgoritmo6"></span></td>
         </tr>
       </tbody>
       <!-- Table footer -->
       <tfoot>
         <tr>
-          <td colspan="2">
-            <textarea cols="50" id="OtrosAlgoritmos" placeholder="Sí recuerda, agrege otros algoritmos">
-        </textarea>
-            <label for="OtrosAlgoritmos">Otros Algoritmos</label><br>
-          </td>
-            <td>
-              <!--El boton submit es el que envia la informacion-->
-              <button type="submit"><img src="images\icons8-send-button-64.png" />Enviar Datos</button>
-            </td>
-          </tr>       
+          <td colspan="3">
+            Otros Algoritmos: <span id="resultadoOtrosAlgoritmos"></span>
+          </td>       
       </tfoot>
     </table>
-  </form>
 </div>
 
 
