--- a/Page3.html
+++ b/Page3.html
@@ -1,35 +1,238 @@
 <!DOCTYPE html>
-<html>
+
 <head>
-    <title>Resultado</title>
-    <script>
-        window.onload = function() {
-            // Obtén los parámetros de la URL
-            const params = new URLSearchParams(window.location.search);
+  <title>Programación Avanzada</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="Styles\page2.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+<script>
+  window.onload = function() {
+      // Obtén los parámetros de la URL
+      const params = new URLSearchParams(window.location.search);
 
-            // Obtiene los valores de los parámetros del formulario
-            const algoritmo1 = params.get('Algoritmo1');
-            const algoritmo2 = params.get('Algoritmo2');
-            // ... Obtén los otros valores de algoritmos
+      // Obtiene los valores de los parámetros del formulario
+      const algoritmo1 = params.get('Algoritmo1');
+      const algoritmo2 = params.get('Algoritmo2');
+      const algoritmo3 = params.get('Algoritmo3');
+      const algoritmo4 = params.get('Algoritmo4');
+      const algoritmo5 = params.get('Algoritmo5');
+      const algoritmo6 = params.get('Algoritmo6');
 
-            // Actualiza el contenido de elementos HTML con los valores
-            document.getElementById('resultadoAlgoritmo1').textContent = algoritmo1;
-            document.getElementById('resultadoAlgoritmo2').textContent = algoritmo2;
-            // ... Actualiza los otros elementos HTML con los valores
+      // ... Obtén los otros valores de algoritmos
 
-            // También puedes hacer algo similar con el textarea
-            const otrosAlgoritmos = params.get('OtrosAlgoritmos');
-            document.getElementById('resultadoOtrosAlgoritmos').textContent = otrosAlgoritmos;
-        };
-    </script>
+      // Actualiza el contenido de elementos HTML con los valores
+      document.getElementById('resultadoAlgoritmo1').textContent = algoritmo1;
+      document.getElementById('resultadoAlgoritmo2').textContent = algoritmo2;
+      document.getElementById('resultadoAlgoritmo3').textContent = algoritmo3;
+      document.getElementById('resultadoAlgoritmo4').textContent = algoritmo4;
+      document.getElementById('resultadoAlgoritmo5').textContent = algoritmo5;
+      document.getElementById('resultadoAlgoritmo6').textContent = algoritmo6;
+      // ... Actualiza los otros elementos HTML con los valores
+
+      // También puedes hacer algo similar con el textarea
+      const otrosAlgoritmos = params.get('OtrosAlgoritmos');
+      document.getElementById('resultadoOtrosAlgoritmos').textContent = otrosAlgoritmos;
+  };
+</script>
 </head>
+
+<html>
+
 <body>
-    <h1>Resultados</h1>
-    <p>Algoritmo 1: <span id="resultadoAlgoritmo1"></span></p>
-    <p>Algoritmo 2: <span id="resultadoAlgoritmo2"></span></p>
-    <!-- ... Otros resultados de algoritmos -->
-    <p>Otros Algoritmos: <span id="resultadoOtrosAlgoritmos"></span></p>
+  <div>
+    <h1 id="fondo">Introducción a la Programación en HTML</h1>
+    <p class="decoration"> HTML (HyperText Markup Language) es un lenguaje de
+       marcado utilizado para crear y estructurar el contenido de las páginas web. 
+      Junto con CSS (Cascading Style Sheets) y JavaScript, HTML forma
+       la base de la programación web moderna.</p>
+
+    <h2>Elementos Básicos de HTML</h2>
+    <p>HTML utiliza una serie de elementos y etiquetas para definir la estructura y el contenido de una página web. Algunos elementos básicos incluyen:</p>
+    <ul>
+        <li>&lt;html&gt;: Define el inicio y el fin del documento HTML.</li>
+        <li>&lt;head&gt;: Contiene metadatos como el título de la página y enlaces a recursos externos.</li>
+        <li>&lt;body&gt;: Contiene el contenido visible de la página, como texto, imágenes y otros elementos.</li>
+        <li>&lt;h1&gt;, &lt;h2&gt;, ..., &lt;h6&gt;: Encabezados de diferentes niveles para jerarquizar el contenido.</li>
+        <li>&lt;p&gt;: Párrafos de texto.</li>
+        <li>&lt;a&gt;: Enlaces a otras páginas o recursos.</li>
+        <li>&lt;img&gt;: Imágenes.</li>
+    </ul>
+   
+    <h2>Etiquetas y Elementos Anidados</h2>
+    <p>En HTML, los elementos pueden anidarse unos dentro de otros para crear estructuras más complejas. Por ejemplo:</p>
+    <pre>
+        &lt;div&gt;
+            &lt;h3&gt;Título&lt;/h3&gt;
+            &lt;p&gt;Este es un párrafo dentro del div.&lt;/p&gt;
+        &lt;/div&gt;
+    </pre>
+
+    <h2>Uso de CSS y JavaScript</h2>
+    <p>Para dar estilo a las páginas web, se utiliza CSS para controlar el diseño y la presentación. JavaScript se utiliza para agregar interactividad y dinamismo a las páginas.</p>
+</div>
+
+<div class="margen">
+  <h1 id="title">Algoritmos de Ordenamiento</h1>
+  <p class="text">Los algoritmos de ordenamiento son un conjunto de instrucciones que se utilizan para ordenar una lista
+    de elementos.
+    Los elementos pueden ser números, letras o cualquier otro tipo de datos. El ordenamiento se puede realizar en orden
+    ascendente o descendente.</p>
+  </br>
+
+  <!--En el action colocacamos la ruta donde queremos que se envie la informacion-->
+    <table>
+      <thead>
+        <th colspan="3">Algoritmos de Ordenamiento</th>
+      </thead>
+      <tbody>
+        <tr>
+          <td rowspan="4"><br><img src="images\sort-algoritms.png" alt="Image" width="220"></td>
+        </tr>
+        <tr>
+          <td>Algoritmo 1: <span id="resultadoAlgoritmo1"></span></td>
+          <td>Algoritmo 2: <span id="resultadoAlgoritmo2"></span></td>
+        </tr>
+        <tr>
+          <td>Algoritmo 3: <span id="resultadoAlgoritmo3"></span></td>
+          <td>Algoritmo 4: <span id="resultadoAlgoritmo4"></span></td>
+        </tr>
+        <tr>
+        
+            <td>Algoritmo 5: <span id="resultadoAlgoritmo5"></span></td>
+            <td>Algoritmo 6: <span id="resultadoAlgoritmo6"></span></td>
+        </tr>
+      </tbody>
+      <!-- Table footer -->
+      <tfoot>
+        <tr>
+          <td colspan="3">
+            Otros Algoritmos: <span id="resultadoOtrosAlgoritmos"></span>
+          </td>       
+      </tfoot>
+    </table>
+</div>
+
+
+
+  <h1 id="title">HTML FILE</h1>
+  <p class="text">HTML (HyperText Markup Language) es el lenguaje estándar para crear
+    páginas web. Utiliza etiquetas para estructurar el contenido, como encabezados,
+    párrafos, listas y enlaces. Una característica interesante de HTML es su
+    capacidad para integrar contenido multimedia, como imágenes y videos,
+    directamente en la página. Además, HTML5 introdujo nuevas etiquetas semánticas
+    que describen el significado del contenido, lo que mejora la accesibilidad y la
+    optimización para motores de búsqueda.</p>
+
+
+  <h1 id="title">CSS FILE</h1>
+  <p class="text">Un archivo .css es un archivo de hoja de estilo utilizado para dar estilo
+    y diseño a los elementos de una página web. Define cómo se verán los elementos,
+    como colores, fuentes, márgenes y disposición. Esto permite separar la
+    estructura HTML del diseño visual, lo que hace que el mantenimiento y
+    la actualización sean más eficientes.</p>
+
+  <h1 id="title">JS FILE</h1>
+  <p class="text">JavaScript es un lenguaje de programación ampliamente utilizado en el
+    desarrollo web. Es un lenguaje de scripting que se ejecuta en el navegador
+    del usuario y permite la creación de interacciones dinámicas en una página web.
+    Puede manipular el contenido HTML, responder a eventos del usuario y comunicarse
+    con servidores para actualizar la página sin necesidad de recargarla, lo que
+    brinda una experiencia más fluida a los usuarios.</p>
+
+  <table>
+    <thead>
+      <th colspan="3">Machine Learning</th>
+    </thead>
+    </tbody>
+    <tr>
+      <td rowspan="4"><br><img src="images\ML.png" alt="Image"></td>
+    </tr>
+
+    <tr>
+      <td>Supervised learning</td>
+      <td>Unsupervised learning</td>
+    </tr>
+    <tr>
+      <td>Regression, Classification</td>
+      <td>Clustering</td>
+    </tr>
+    <tr>
+      <td>Decision Trees</td>
+      <td>Neural Networks</td>
+      </tbody>
+      <!-- Table footer -->
+      <tfoot>
+        <tr>
+          <td colspan="3">Fuente: Wikipedia</td>
+        </tr>
+      </tfoot>
+  </table>
+  </br>
+
+  </table>
+  </br>
+  </br>
+  <table>
+    <thead>
+      <th colspan="4">Principales Iniciativas de Open-Source</th>
+    </thead>
+    </tbody>
+    <tr>
+      <td rowspan="6"><img src="images\open-source.png" alt="Image"></td>
+    </tr>
+    <tr>
+      <th>Software</th>
+      <th>Descripción</th>
+      <th>Proyecto</th>
+    </tr>
+    <tr>
+      <td>Linux</td>
+      <td>Sistema operativo de código abierto basado en el kernel de Linux.</td>
+      <td><a target="_blank" href="https://www.kernel.org/">kernel.org</a></td>
+    </tr>
+    <tr>
+      <td>Firefox</td>
+      <td>Navegador web de código abierto desarrollado por Mozilla.</td>
+      <td><a target="_blank" href="https://www.mozilla.org/firefox/">mozilla.org/firefox</a></td>
+    </tr>
+    <tr>
+      <td>LibreOffice</td>
+      <td>Suite de productividad que incluye procesador de texto, hoja de cálculo, presentaciones, etc.</td>
+      <td><a target="_blank" href="https://www.libreoffice.org/">libreoffice.org</a></td>
+    </tr>
+    <tr>
+      <td>WordPress</td>
+      <td>Plataforma de gestión de contenido (CMS) utilizada para crear sitios web y blogs.</td>
+      <td><a target="_blank" href="https://wordpress.org/">wordpress.org</a></td>
+      </tbody>
+      <!-- Table footer -->
+      <tfoot>
+        <tr>
+          <td colspan="4">Fuente: Wikipedia</td>
+        </tr>
+      </tfoot>
+      </br>
+  </table>
+
+
+  </br>
+
+
+  <button type="button">
+    <a target="_blank" href="https://github.com/Djaiber">GITHUB PORFILE</a>
+  </button>
+  <button type="button">
+    <a target="_blank" href="https://github.com/Djaiber">LINKEDIN PROFILE</a>
+  </button>
+  </br>
+  </br>
+
+
+
 </body>
+
 </html>
 
 
