Botones de direccionamiento

--- a/Page1.html
+++ b/Page1.html
@@ -5,8 +5,10 @@
 
 <html>
   <body>
-
-    <div class="margen">
+    <button type="button"><a href="Page2.html"> Page 2</a></button>
+    <button type="button"><a href="Page3.html"> Page 3</a></button>
+    </br>
+    <div>
       <h1 id="title">Algoritmos de Ordenamiento</h1>
       <p class="text">Los algoritmos de ordenamiento son un conjunto de instrucciones que se utilizan para ordenar una lista
         de elementos.
@@ -27,31 +29,31 @@
             </tr>
             <tr>
               <td>
-                <input type="text" id="Algoritmo1" name="Algoritmo1" placeholder="Algoritmo 1">
+                <input type="text" id="Algoritmo1" name="Algoritmo1" placeholder="Algoritmo 1" required>
                 <label for="Algoritmo1">Tipo 1</label><br>
               </td>
               <td>
-                <input type="text" id="Algoritmo2" name="Algoritmo2" placeholder="Algoritmo 2">
+                <input type="text" id="Algoritmo2" name="Algoritmo2" placeholder="Algoritmo 2" required>
                 <label for="Algoritmo2">Tipo 2</label><br>
               </td>
             </tr>
             <tr>
               <td>
-                <input type="text" id="Algoritmo3" name="Algoritmo3" placeholder="Algoritmo 3">
+                <input type="text" id="Algoritmo3" name="Algoritmo3" placeholder="Algoritmo 3" required>
                 <label for="Algoritmo3">Tipo 3</label><br>
               </td>
               <td>
-                <input type="text" id="Algoritmo4" name="Algoritmo4" placeholder="Algoritmo 4">
+                <input type="text" id="Algoritmo4" name="Algoritmo4" placeholder="Algoritmo 4" required>
                 <label for="Algoritmo4">Tipo 4</label><br>
               </td>
             </tr>
             <tr>
               <td>
-                <input type="text" id="Algoritmo5" name="Algoritmo5" placeholder="Algoritmo 5">
+                <input type="text" id="Algoritmo5" name="Algoritmo5" placeholder="Algoritmo 5" required>
                 <label for="Algoritmo5">Tipo 5</label><br>
               </td>
               <td>
-                <input type="text" id="Algoritmo6" name="Algoritmo6" placeholder="Algoritmo 6">
+                <input type="text" id="Algoritmo6" name="Algoritmo6" placeholder="Algoritmo 6" required>
                 <label for="Algoritmo6">Tipo 6</label><br>
               </td>
             </tr>
@@ -60,7 +62,7 @@
           <tfoot>
             <tr>
               <td colspan="2">
-                <textarea cols="50" id="OtrosAlgoritmos" placeholder="Sí recuerda, agrege otros algoritmos">
+                <textarea cols="50" id="OtrosAlgoritmos" name="OtrosAlgoritmos" required>
             </textarea>
                 <label for="OtrosAlgoritmos">Otros Algoritmos</label><br>
               </td>
