--- a/Page2.html
+++ b/Page2.html
@@ -41,6 +41,9 @@
 <html>
 
 <body>
+  <button type="button"><a href="Page1.html"> Page 1</a></button>
+  <button type="button"><a href="Page3.html"> Page 3</a></button>
+ </br>
   <div>
     <h1 id="fondo">Introducción a la Programación en HTML</h1>
     <p class="decoration"> HTML (HyperText Markup Language) es un lenguaje de
