--- a/Page3.html
+++ b/Page3.html
@@ -3,7 +3,7 @@
 <head>
   <title>Programación Avanzada</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="Styles\page2.css">
+  <link rel="stylesheet" href="Styles\page3.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
@@ -41,6 +41,9 @@
 <html>
 
 <body>
+  <button type="button"><a href="Page1.html"> Page 1</a></button>
+  <button type="button"><a href="Page2.html"> Page 2</a></button>
+  </br>
   <div>
     <h1 id="fondo">Introducción a la Programación en HTML</h1>
     <p class="decoration"> HTML (HyperText Markup Language) es un lenguaje de
