--- a/Page1.html
+++ b/Page1.html
@@ -4,13 +4,13 @@
 </head>
 
 <html>
-  <body>
+  <body style="background-color: blanchedalmond; text-align: center;" >
     <button type="button"><a href="Page2.html"> Page 2</a></button>
     <button type="button"><a href="Page3.html"> Page 3</a></button>
     </br>
     <div>
       <h1 id="title">Algoritmos de Ordenamiento</h1>
-      <p class="text">Los algoritmos de ordenamiento son un conjunto de instrucciones que se utilizan para ordenar una lista
+      <p>Los algoritmos de ordenamiento son un conjunto de instrucciones que se utilizan para ordenar una lista
         de elementos.
         Los elementos pueden ser números, letras o cualquier otro tipo de datos. El ordenamiento se puede realizar en orden
         ascendente o descendente.</p>
@@ -19,7 +19,7 @@
       <!--En el action colocacamos la ruta donde queremos que se envie la informacion-->
     
       <form action="Page2.html" method="GET">
-        <table>
+        <table style="margin: auto;">
           <thead>
             <th colspan="3">Algoritmos de Ordenamiento</th>
           </thead>
