--- a/Page1.html
+++ b/Page1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>Programación Avanzada</title>
-  <script src="function.js"></script>
+  <script src="Scripts/function.js"></script>
 </head>
 
 <html>
@@ -85,6 +85,9 @@
         </table>
       </form>
     </div>
+    <a href="Page3.html"> Ir a Page 3</a>
+
+
   </br>
 
 <h1 style="color:rgb(131, 5, 5);  margin: auto;
