--- a/Page2.html
+++ b/Page2.html
@@ -7,16 +7,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="Styles\page2.css">
-  <script src="script.js"></script>  
+  <script src="Scripts/script.js"></script>  
 </head>
 <html>
 
 <body>
-  <link rel="script" href="script.js">
-  <link rel="script" href="function.js">
-  <button type="button"><a href="Page3.html"> Page 3</a></button>
- </br>
-
+  
   <h1 id="fondo">Algoritmos de Ordenamiento</h1>
   <p id="algoritmo">Los algoritmos de ordenamiento son un conjunto de instrucciones que se utilizan para ordenar una lista
     de elementos.
@@ -60,8 +56,9 @@
     </table>
 </div>
 </br>
+<a href="Page3.html"> Ir a Page 3</a>
 
-
+</br>
 
   <h1 id="html">HTML FILE</h1>
   <p>HTML (HyperText Markup Language) es el lenguaje estándar para crear
